tests/ui/feature-gates/feature-gate-sized-hierarchy.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/feature-gate-sized-hierarchy.rs:17:19
   |
LL |     needs_sized::<str>();
   |                   ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `needs_sized`
  --> $DIR/feature-gate-sized-hierarchy.rs:8:19
   |
LL | fn needs_sized<T: Sized>() {}
   |                   ^^^^^ required by this bound in `needs_sized`

error[E0277]: the size for values of type `main::Foo` cannot be known
  --> $DIR/feature-gate-sized-hierarchy.rs:25:23
   |
LL |     needs_metasized::<Foo>();
   |                       ^^^ doesn't have a known size
   |
   = help: the trait `MetaSized` is not implemented for `main::Foo`
note: required by a bound in `needs_metasized`
  --> $DIR/feature-gate-sized-hierarchy.rs:7:23
   |
LL | fn needs_metasized<T: MetaSized>() {}
   |                       ^^^^^^^^^ required by this bound in `needs_metasized`

error[E0277]: the size for values of type `main::Foo` cannot be known at compilation time
  --> $DIR/feature-gate-sized-hierarchy.rs:27:19
   |
LL |     needs_sized::<Foo>();
   |                   ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `main::Foo`
note: required by a bound in `needs_sized`
  --> $DIR/feature-gate-sized-hierarchy.rs:8:19
   |
LL | fn needs_sized<T: Sized>() {}
   |                   ^^^^^ required by this bound in `needs_sized`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
